test/libyul/yulSyntaxTests/continue_outside_of_for_loop.yul
{
	let x
	if x { continue }
}
// ----
// SyntaxError 2592: (17-25): Keyword "continue" needs to be inside a for-loop body.
